# excel-master-cli

./: .gitignore  pyproject.toml
.omc/sessions/: 3caf435e-92e6-45de-80b0-57270ea2a8b2.json  e3182a35-54af-45b5-aa6b-e5471e52393d.json
docs/superpowers/specs/: 2026-04-21-excel-master-cli-design.md
openspec/changes/archive/2026-04-21-excel-master-cli/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-21-excel-master-cli/specs/cache-resume/: spec.md
openspec/changes/archive/2026-04-21-excel-master-cli/specs/cli-interface/: spec.md
openspec/changes/archive/2026-04-21-excel-master-cli/specs/excel-rendering/: spec.md
openspec/changes/archive/2026-04-21-excel-master-cli/specs/input-parsing/: spec.md
openspec/changes/archive/2026-04-21-excel-master-cli/specs/template-system/: spec.md
openspec/changes/image-to-testcase/: design.md  proposal.md  tasks.md
openspec/changes/image-to-testcase/specs/image-parser/: spec.md
src/excel_master/: __init__.py  cache.py  cli.py
src/excel_master/assets/templates/: project-plan.xlsx  requirements.xlsx  test-case.xlsx
src/excel_master/parser/: __init__.py  base.py  docx.py  image.py  json_yaml.py  markdown.py  text.py
src/excel_master/renderer/: __init__.py  xlsx.py
src/excel_master/template/: __init__.py  loader.py  registry.py
src/excel_master_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cache.py  test_cli.py  test_integration.py  test_parsers.py  test_renderer.py
